@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* Added more engines
+* Added todo
+
 1.0.5
 -----
 
